Padronizar response. Middleware level app Token
